# netbox-oxidized-jsonfile

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: container.yml
src/: main.rs
